got stream to work

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,19 +4,15 @@
 	<head>
 		<title>Giffinate</title>
 	</head>
-
+	<link type="text/css" href="stylesheets/style.css" />
 
 	<body>
-		
-		<div class="container">
+		<div>
 
 			<!-- GIFF CONTENT -->
-
 			<div>
-				<div class="border-padding">
-				
-					<video autoplay></video>
-					
+				<div>
+					<video autoplay></video>			
 				</div>
 			</div>
 
@@ -26,27 +22,22 @@
 			<!-- USER INTERACTIONS -->
 			<div>
 				<form class="options">
-						<button class="capture btn-primary btn-lg">Giffinate!</button>
+						<button>Giffinate!</button>
 
-						<label class="border-padding">Text:</label>
+						<label>Text:</label>
 						<input type="text" name="text">
-
-
-
 						<button>Edit</button>
 						<button>Share</button>
+
 				</form>
 			</div>
+		
+
+
+
+
+
 		</div>
-
-
-
-
-
-
-
 	  <script src="javascripts/main.js"></script>
-
-
 	</body>
 </html>
