--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -7,7 +6,14 @@ a {
   color: #00B7FF;
 }
 
-video {
-  width: 200px;
-  object-fit: cover; 
+.size {
+	width: 100%;
+  max-width: 300px;	
+}
+
+.gif-display {
+}
+
+.hidden {
+	display: none;
 }
