--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
 
 	<head>
+	<meta charset="utf-8">
 		<title>Gifenger</title>
 
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
