--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,16 +17,22 @@
 				<div class="gif-display size hidden"></div>
 			</div>
 
-
+			<div id="bar">
+				<progress max="1" value="0" class="progress-bar"></progress>
+			</div>
 
 
 			<!-- USER INTERACTIONS -->
 			<div>
 				<label for="text">Text:</label>
-				<input name="text" id="text" type="text" placeholder="Add text here...">
+				<input name="text" id="text" type="text" placeholder="Add text here..." size="20">
+			</div>
 
-				<button id="create-gif-btn">Giffinate!</button>
+			<div>
+				<button id="create-gif-btn">Record GIF</button>
+			</div>
 
+			<div>
 				<button id="edit-btn">Edit</button>
 				<button id="share-btn">Share</button>
 			</div>
