--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,13 @@ a {
   color: #00B7FF;
 }
 
+#bar {
+}
+
+.progress-bar {
+	width: 300px;
+}
+
 .size {
 	width: 100%;
   max-width: 300px;	
@@ -22,4 +29,19 @@ a {
 
 .hidden {
 	display: none;
+}
+
+
+#create-gif-btn {
+	background-color: #4CAF50; /* Green */
+  border: 1px solid green;
+  border-radius: 5px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+	width: 300px;
 }
