--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,8 +15,21 @@ a {
 #bar {
 }
 
-.progress-bar {
+progress {
+	float: none;
 	width: 300px;
+	border: none;
+}
+
+/* Chrome */
+progress::-webkit-progress-bar {
+    background: #f5f5f5;
+}
+progress::-webkit-progress-value {
+    background: #5cb85c;
+}
+progress:not([value])::-webkit-progress-bar {
+  background:#fdd;
 }
 
 .size {
