--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,16 @@
 			</div>
 
 			<div>
+				<button>Filter</button>
+			</div>
+
+			<div>
+				<button id="edit-btn">Edit</button>
+			</div>
+
+			<br />
+
+			<div>
 				<button id="create-gif-btn">Record GIF</button>
 			</div>
 
@@ -37,12 +47,12 @@
 
 			<div>
 				<ul class="gif-display size hidden"></ul>
+				
+				<a href="http://www.facebook.com/sharer.php?u=https://google.com" target="_blank">
+        	<img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
+    		</a>
 			</div>
 
-			<div>
-				<button id="edit-btn">Edit</button>
-				<button id="share-btn">Share</button>
-			</div>
 			
 		
 
@@ -50,13 +60,19 @@
 
 
 		</div>
+		<script
+		  src="https://code.jquery.com/jquery-3.1.1.min.js"
+		  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+		  crossorigin="anonymous">  	
+		</script>
 
 		<script src="javascripts/dependencies/gifshot.js"></script>
-    <script src="javascripts/dependencies/prism.min.js"></script>
+    <!-- <script src="javascripts/dependencies/prism.min.js"></script> -->
     <script src="javascripts/dependencies/esprima.min.js"></script>
-    <script src="javascripts/dependencies/escodegen.min.js"></script>
+    <!-- <script src="javascripts/dependencies/escodegen.min.js"></script> -->
     <script src="javascripts/dependencies/lodash.min.js"></script>
     <script src="javascripts/dependencies/classList.js"></script>
 	  <script src="javascripts/main.js"></script>
+	  <!-- <script src="javascripts/test.js"></script> -->
 	</body>
 </html>
