got filter options to work

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,6 @@
 	
 	<body>
 
-		<div>
-			<nav class="navbar navbar-inverse bg-inverse">Gifme</nav>
-		</div>
-		
 		<div class="container squeeze">
 			
 
@@ -47,23 +43,16 @@
 				<div>
 					<div class="btn-group" data-toggle="buttons">
 
-				    <input id="insta" name="state-d" type="radio">
-				    <label for="insta" onclick="">Insta-Filter</label>
+				    <input id="insta" name="filter" type="radio">
+				    <label for="insta">Insta-Filter</label>
 
-				    <input id="none" name="state-d" type="radio" checked="checked">
-				    <label for="none" onclick="">None</label>
+				    <input id="none" name="filter" type="radio">
+				    <label for="none">None</label>
 
-				    <input id="vhs" name="state-d" type="radio">
-				    <label for="vhs" onclick="">VHS-Filter</label>
+				    <input id="vhs" name="filter" type="radio">
+				    <label for="vhs">VHS-Filter</label>
 
 					</div>
-				</div>
-
-				<br />
-				
-				<div>
-					<label for="duration">Duration</label>
-					<input id="duration" type="range"  value="" min="0" max="30" />
 				</div>
 
 				<br />
