--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,6 +37,11 @@ progress:not([value])::-webkit-progress-bar {
   display: none;
 }
 
+.dark {
+  background-color: #282828;
+  color: #9999FF;
+}
+
 #share-buttons img {
 width: 35px;
 padding: 5px;
