--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,8 @@
 					<input name="text" id="text" type="text" placeholder="Add a brief message..." size="28" maxlength="20">
 				</div>
 
+				<!-- FILTERS -->
+
 				<div class="btn-group radio-btns" data-toggle="buttons">
 			    <input id="insta" name="filter" type="radio">
 			    <label for="insta">Insta-Filter</label>
@@ -57,18 +59,16 @@
 				<br />
 
 				<div>
-					<button id="create-gif-btn">Record GIF</button>
+						<button id="create-gif-btn">Record GIF</button>
 				</div>
 
 				<br />
-
-				<div>
-					<button id="remove-btn">Remove GIFS</button>
-				</div>
-
+				
+				<!-- Where the GIFs will be displayed -->
 				<div>
 					<ul class="gif-display size hidden"></ul>
 				</div>
+
 			</div>
 			
 		
