--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,8 +65,8 @@
 				<br />
 				
 				<!-- Where the GIFs will be displayed -->
-				<div>
-					<ul class="gif-display size hidden"></ul>
+				<div class="gif-box">
+					<ul class="gif-display hidden"></ul>
 				</div>
 
 			</div>
