--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,15 @@
 
 				<!-- USER INTERACTIONS -->
 				<div class="right">
-				
+
+					<!-- Add draggable feature in future update -->
+					<div>
+						<div class="upload-box">
+							<p>
+								Upload
+							</p>
+						</div>
+					</div>
 
 					<div class="text-area">
 						<label for="text">
@@ -87,8 +95,24 @@
 						<progress class="gifshot-progress-bar hidden" max="1" value="0"></progress>
 					</div>
 
-				<ul class="gif-display hidden"></ul>
+				<ul class="gif-display">
+					<li>
+						<img src="/images/one.gif">
+					</li>
+					<li>
+						<img src="/images/two.gif">
+					</li>
+					<li>
+						<img src="/images/three.gif">
+					</li>
+					<li>
+						<img src="/images/four.gif">
+					</li>
+				</ul>
 			</div>
+
+
+
 
 		
 
