--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,15 +35,15 @@
 
 				<!-- USER INTERACTIONS -->
 				<div class="right">
-
-					<!-- Add draggable feature in future update -->
+<!-- 
+					Add draggable feature in future update
 					<div>
 						<div class="upload-box">
 							<p>
 								Upload
 							</p>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="text-area">
 						<label for="text">
